--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -69,11 +69,6 @@
 % something like that.
 
 
-
-% TODO: mention a note about Python training around the beginning
-
-
-
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Introduction}
@@ -128,16 +123,6 @@
   \hfill \dots or maybe not?
 
 \end{frame}
-
-% - In 1993, I was using Xmosaic, the good old days of Linux had not arrived yet
-% - Then Netscape came about, introduced some changes, and then Mozilla
-% - I wanted to keep my preciously organized bookmarks from one browser to the next
-% - In those days, bookmarks had more value, we did not have Google to help us out
-% - At some point I had to use Windows, with yet another bookmarks format
-% - Now I'm using Firefox, and I really don't know what I'll be using next
-% - I wrote a small program to manage them, it would self-organize
-% - This is a pattern in my life, solving little problems with scripts
-
 
 
 %% %-------------------------------------------------------------------------------
@@ -210,7 +195,7 @@
   \begin{itemize}
   \item Pat Jennings/Synaptic - cycling through China
   \item Phil Greenspun - \verb@photo.net@
-  \item I'm inspired!  \quad So I write \dots 
+  \item I'm inspired!  \quad So I write \dots
   \end{itemize}
 
 \vfill\pause
@@ -264,7 +249,7 @@
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{2002 - The Art of Taking Notes}
-  \framesubtitle{Wikis Suck}
+  \framesubtitle{Wikis Suck (For This Purpose)}
 
   I would like to share many of these short technical documents with other
   people \dots naturally, the idea of using Wikis come to mind.
@@ -295,27 +280,6 @@
 \end{frame}
 
 
-%% %-------------------------------------------------------------------------------
-%% \begin{frame}[fragile]
-%%   \frametitle{Real Editing}
-%%
-%% I live in Emacs.
-%%
-%% When I first log in on my machine, I invariably do:
-%% \begin{enumerate}
-%% \item start a shell
-%% \item start emacs
-%% \item start a web browser
-%% \end{enumerate}
-%%
-%% Most of you are probably doing the same.
-%%
-%% Emacs or vi are always kept running.
-%%
-%% \end{frame}
-
-
-
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Mixed Data Example: Travel Files}
@@ -328,17 +292,17 @@
   different types of things:
 \begin{itemize}
 
-\item They contain a list of things to do for a trip, personal notes, 
-  itineraries 
+\item They contain a list of things to do for a trip, personal notes,
+  itineraries
   (\textbf{documents})
 
 \item They contain addresses of people and places to visit
   (\textbf{contact infos})
 
-\item They contain URLs of related websites 
+\item They contain URLs of related websites
   (\textbf{bookmarks})
 
-\item They contain references to books and articles 
+\item They contain references to books and articles
   (\textbf{publications})
 
 \end{itemize}
@@ -406,28 +370,28 @@ http://www.mdtravelhealth.com/destinations/samerica/brazil.html
 %% %-------------------------------------------------------------------------------
 %% \begin{frame}[fragile]
 %%   \frametitle{Mixed Data Example: Travel Files}
-%% 
+%%
 %% {\footnotesize
 %% \begin{verbatim}
-%% 
+%%
 %% Accomodation
 %% ============
-%% 
+%%
 %% * :n: ÂMBAR POUSADA
 %%   :a: Rua Afonso Celso, 485, Barra. Salvador - Bahia - Brasil
 %%   :p: 55-71-3264-6956 / 3267-1507
 %%   :e: ambarpousada@ambarpousada.com.br
 %%   :w: http://www.ambarpousada.com.br/
-%% 
+%%
 %%   Para chegar
-%% 
+%%
 %%   Do aeroporto, tem ônibus executivo "Praça da Sé" via Farol da Barra durante o
 %%   dia, tem que saltar no Barra Center, na praia. Se você chegar à noite ou se
 %%   preferir o taxi, peçam por e-mail e mandaremos, por sua conta, um dos nossos
 %%   taxistas preferidos!
 %% \end{verbatim}
 %% }
-%% 
+%%
 %% \end{frame}
 
 
@@ -579,8 +543,6 @@ http://www.mdtravelhealth.com/destinations/samerica/brazil.html
   \includegraphics[width=1.0\textwidth]{docutils2.pdf}
 
 \end{frame}
-
-% ask Goodger to get up
 
 
 %-------------------------------------------------------------------------------
@@ -760,11 +722,7 @@ sat 2005-12-31
 
 \includegraphics[width=1.0\textwidth]{calendar-shot.pdf}
 
-% Add this: I have dated events in my file for Brazil, PyCon, my TODO file, they
-% all merge into my calendar.
-
 \end{frame}
-
 
 
 %-------------------------------------------------------------------------------
@@ -874,7 +832,7 @@ sat 2005-12-31
     \begin{itemize}
     \item I need to write more presentations for my data
     \end{itemize}
-  
+
   \item Support encryption in the publisher client, hidden files
 
   \item Support per-document options
@@ -911,8 +869,4 @@ I will be around during the sprints.
 
 %===============================================================================
 \end{document}
-
-
-% * borrow someone's mouse for the show
-% * use xannotate during the presentation
 
