--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -1,5 +1,7 @@
 %
-% Introduction slides
+% Slides for given talks:
+%
+% * 2006-02-26: PyCon 2006
 %
 %\documentclass[compress,trans]{beamer}
 \documentclass{beamer}
