--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -833,6 +833,7 @@ sat 2005-12-31
   \item Stabilize more
     \begin{itemize}
     \item I need to write more presentations for my data
+    \item Convert presentations output to microformats
     \end{itemize}
 
   \item Support encryption in the publisher client, hidden files
