--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -29,7 +29,7 @@
 \institute{Furius Enterprise}
 
 \date{PyCon 2006 \\
-{\small (Dallas, Texas, 23-26 february 2006)}}
+{\small (FACIL, Montreal, Canada, 20th April 2006)}}
 
 \subject{Nabu Presentation @ PyCon 2006}
 
@@ -677,6 +677,45 @@ class AddressStorage(extract.SQLExtractorStorage):
     \includegraphics[width=0.9\textwidth]{page-shot.pdf}
   \end{center}
 
+\end{frame}
+
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{Presentation: Peepholes}
+
+\vfill
+
+  \begin{center}
+    \includegraphics[width=0.9\textwidth]{peephole1.pdf}
+  \end{center}
+
+\vfill
+\hrule
+\vfill
+
+  \begin{center}
+    \includegraphics[width=0.9\textwidth]{peephole2.pdf}
+  \end{center}
+
+\vfill
+
+\end{frame}
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{Presentation: Peepholes}
+
+  Peepholes are passwordless privileged acccess to selected documents in my Nabu
+  store.
+  \begin{itemize}
+  \item Useful for sending a link to a file that is work-in-progress
+  \item Does not require users/passwords, relies on the ``relative'' privacy of
+    email
+  \item Provides access to only some selected resources
+  \item Expires after some time, or after a number of accesses (self-destroying
+    links\dots [insert M.I. music here])
+  \end{itemize}
 \end{frame}
 
 
