--- a/doc/talks/nabupres.tex
+++ b/doc/talks/nabupres.tex
@@ -1,7 +1,8 @@
 %
 % Slides for given talks:
 %
-% * 2006-02-26: PyCon 2006
+% * 2006-02-26: PyCon 2006, Dallas (Texas), USA
+% * 2006-04-20: FACIL, Montreal (Quebec), Canada
 %
 %\documentclass[compress,trans]{beamer}
 \documentclass{beamer}
