--- a/TODO
+++ b/TODO
@@ -12,6 +12,10 @@
 Misc
 ====
 
+- All the astext() functions from the extractors should be replaced by a
+  function that checks for the presence of lists, and concatenate if the arg is
+  a list.  See book() for example.
+
 - Skip symbolic links by default.
 
 - Fix Nabu in that if there is an error, the client script should keep going
