--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@
 Misc
 ====
 
+- Make my addrbook table available for my mobile phone
+
 - You **REALLY** need to support multiple profiles for running nabu manually.
   It's really annoying to delete the entire server database by accident.
 
