--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@
 Misc
 ====
 
+- Birthday fields do not seem to extract properly, for the most pat
+
 - Make my addrbook table available for my mobile phone
 
 - You **REALLY** need to support multiple profiles for running nabu manually.
