--- a/TODO
+++ b/TODO
@@ -15,6 +15,9 @@
 Misc
 ====
 
+- Produce a photo for my main website page, a series of photo-booth photographs
+  stacked next to each other, vertically, for the main page.
+
 - Birthday fields do not seem to extract properly, for the most pat
 
 - Make my addrbook table available for my mobile phone
