--- a/README
+++ b/README
@@ -383,6 +383,7 @@ Some links to projects with similar goals, or that have some kind of conceptual
 relation:
 
 - `DEVONthink <http://www.devon-technologies.com/products/devonthink/>`_
+- `PI Corporation <http://www.picorp.com/>`_
 
 
 
