--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@
 Misc
 ====
 
+- Interrupting the nabu client should be handled.
+
 - Add a feature to directly email a brand-new peephole from the
   website (just enter the email addresses and send it from there).
 
