--- a/TODO
+++ b/TODO
@@ -15,6 +15,12 @@
 Misc
 ====
 
+- Check out links:
+  - stikkit:
+  - m[uo]ndial: db of place-names in the world
+  - “The Predictors”, book, see ref.
+
+
 - Interrupting the nabu client should be handled.
 
 - Add a feature to directly email a brand-new peephole from the
