--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@
 Misc
 ====
 
+- Implement a swish-e index on the database and link it up to walus.
+
 - Check out links:
   - stikkit:
   - m[uo]ndial: db of place-names in the world
